--- a/couple.html
+++ b/couple.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>settle</title>
+      <title>bhai bhai caterers</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -19,7 +19,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/fds2.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -47,7 +47,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/fds2.png" alt="#" style="height: 155px;"/></a>
                            </div>
                         </div>
                      </div>
@@ -80,10 +80,10 @@
                            <li class="nav-item">
                               <a class="nav-link" href="gallery.html">Gallery</a>
                            </li>
-                           <!-- <li class="nav-item">
-                              <a class="nav-link" href="Javascript:void(0)">RSVP</a>
-                           </li>
                            <li class="nav-item">
+                              <a class="nav-link" href="client.html">Our Clients</a>
+                           </li>
+                           <!-- <li class="nav-item">
                               <a class="nav-link" href="Javascript:void(0)">Best People</a>
                            </li>
                            <li class="nav-item">
@@ -122,7 +122,7 @@
                </div>
                <div class="col-md-5">
                   <div class="doi">
-                     <figure><img src="images/mul.png" alt="#"/></figure>
+                     <figure><img src="images/pan4.jpeg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -145,7 +145,7 @@
                </div>
                <div class="col-md-5">
                   <div class="doi">
-                     <figure><img src="images/mul.png" alt="#"/></figure>
+                     <figure><img src="images/green2.jpeg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -168,7 +168,7 @@
                </div>
                <div class="col-md-5">
                   <div class="doi">
-                     <figure><img src="images/mul.png" alt="#"/></figure>
+                     <figure><img src="images/sofa.jpeg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -176,95 +176,119 @@
       </div>
       <!-- couple2 -->
 
-      <!--  footer -->
-      <footer>
-         <div class="footer">
-            <div class="container">
-               <div class="row border_bo1 ">
-                  <div class="col-md-4">
-                     <a class="logof" href="index.html"><img src="images/logo.png" alt="#"/></a> 
-                     <form class="form_subscri">
-                        <!-- <div class="row">
-                           <div class="col-md-12">
-                              <h3>Subscribe Now</h3>
-                           </div>
-                           <div class="col-md-12">
-                              <input class="subsrib" placeholder="Enter your email" type="text" name="Enter your email">
-                           </div>
-                           <div class="col-md-12">
-                              <button class="subsci_btn">subscribe</button>
-                           </div> -->
-                        </div>
-                     </form>
-                  </div>
-                  <div class="col-lg-2 col-md-4 col-sm-6">
-                     <div class="infoma">
-                        <h3>Information</h3>
-                        <ul>
-                           <li>There are many </li>
-                           <li>variations of pas</li>
-                           <li>sages of Lorem  </li>
-                           <li>psum available,  </li>
-                           <li>but the majority  </li>
-                           <li>have suffered  </li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-2 col-md-4 col-sm-6">
-                     <div class="infoma">
-                        <h3>Helpful Links</h3>
-                        <ul>
-                           <li>There are many </li>
-                           <li>variations of pas</li>
-                           <li>sages of Lorem  </li>
-                           <li>psum available,  </li>
-                           <li>but the majority  </li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-2 col-md-4 col-sm-6">
-                     <div class="infoma">
-                        <h3>Our Weddings</h3>
-                        <ul>
-                           <li>There are many </li>
-                           <li>variations of pas</li>
-                           <li>sages of Lorem  </li>
-                           <li>psum available,  </li>
-                           <li>but the majority  </li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-2 col-md-4 col-sm-6">
-                     <div class="infoma">
-                        <h3>Contact Us</h3>
-                        <ul class="conta">
-                           <li><i class="fa fa-map-marker" aria-hidden="true"></i>Locations 
-                           </li>
-                           <li><i class="fa fa-volume-control-phone" aria-hidden="true"></i>+71 12345678901</li>
-                           <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> demo@gmail.com</a></li>
-                        </ul>
-                        <ul class="social_icon">
-                           <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                     </div>
+      <!-- couple2 -->
+      <div class="couple2">
+         <div class="container-fluid">
+            <div class="row">
+               <div class="col-md-7">
+                  <div class="titlepage text_align_left">
+                     <span>Our introduction</span>
+                     <h2>Meet Happy Couple</h2>
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                     </p>
+                     <!-- <a class="read_more whitebg" href="Javascript:void(0)">See More</a> -->
                   </div>
                </div>
-            </div>
-            <div class="copyright">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-12">
-                        <p>© 2020 All Rights Reserved. <a href="https://www.bluewebsurfer.com/"> BluewebSurfer</a></p>
-                     </div>
+               <div class="col-md-5">
+                  <div class="doi">
+                     <figure><img src="images/coup.jpeg" alt="#"/></figure>
                   </div>
                </div>
             </div>
          </div>
-      </footer>
-      <!-- end footer -->
+      </div>
+      <!-- couple2 -->
+
+     <!--  footer -->
+     <footer>
+      <div class="footer">
+         <div class="container">
+            <div class="row border_bo1 ">
+               <div class="col-md-4">
+                  <a class="logof" href="index.html"><img src="images/fds2.png" alt="#"/></a> 
+                  <form class="form_subscri">
+                     <div class="row">
+                        <!-- <div class="col-md-12">
+                           <h3>Subscribe Now</h3>
+                        </div> -->
+                        <!-- <div class="col-md-12">
+                           <input class="subsrib" placeholder="Enter your email" type="text" name="Enter your email">
+                        </div> -->
+                        <!-- <div class="col-md-12">
+                           <button class="subsci_btn">subscribe</button>
+                        </div> -->
+                     </div>
+                  </form>
+               </div>
+               <div class="col-lg-2 col-md-4 col-sm-6">
+                  <div class="infoma">
+                     <h3>Information</h3>
+                     <ul>
+                        <li>There are many </li>
+                        <li>variations of pas</li>
+                        <li>sages of Lorem  </li>
+                        <li>psum available,  </li>
+                        <li>but the majority  </li>
+                        <li>have suffered  </li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-lg-2 col-md-4 col-sm-6">
+                  <div class="infoma">
+                     <h3>Helpful Links</h3>
+                     <ul>
+                        <li>There are many </li>
+                        <li>variations of pas</li>
+                        <li>sages of Lorem  </li>
+                        <li>psum available,  </li>
+                        <li>but the majority  </li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-lg-2 col-md-4 col-sm-6">
+                  <div class="infoma">
+                     <h3>Our Weddings</h3>
+                     <ul>
+                        <li>There are many </li>
+                        <li>variations of pas</li>
+                        <li>sages of Lorem  </li>
+                        <li>psum available,  </li>
+                        <li>but the majority  </li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-lg-2 col-md-4 col-sm-6">
+                  <div class="infoma">
+                     <h3>Contact Us</h3>
+                     <ul class="conta">
+                        <li><i class="fa fa-map-marker" aria-hidden="true"></i>Locations 
+                        </li>
+                        <li><i class="fa fa-volume-control-phone" aria-hidden="true"></i>+71 12345678901</li>
+                        <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> demo@gmail.com</a></li>
+                     </ul>
+                     <ul class="social_icon">
+                        <li><a href="https://www.facebook.com/151301215712218/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.instagram.com/ankurdasbbd/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="https://bit.ly/mychannel321"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+                        
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="copyright">
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-12">
+                     <p>© 2020 All Rights Reserved. <a href="https://www.bluewebsurfer.com/"> BluewebSurfer</a></p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </footer>
+   <!-- end footer -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
