--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>settle</title>
+      <title>bhai bhai caterers</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -19,7 +19,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/fds2.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -47,7 +47,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/fds2.png" alt="#" style="height: 155px;"/></a>
                            </div>
                         </div>
                      </div>
@@ -80,10 +80,10 @@
                            <li class="nav-item">
                               <a class="nav-link" href="gallery.html">Gallery</a>
                            </li>
-                           <!-- <li class="nav-item">
-                              <a class="nav-link" href="Javascript:void(0)">RSVP</a>
-                           </li>
                            <li class="nav-item">
+                              <a class="nav-link" href="client.html">Our Clients</a>
+                           </li>
+                           <!-- <li class="nav-item">
                               <a class="nav-link" href="Javascript:void(0)">Best People</a>
                            </li>
                            <li class="nav-item">
@@ -118,7 +118,7 @@
                </div>
                <div class="col-md-10 offset-md-1">
                   <div class="about_img text_align_center">
-                     <figure><img src="images/about.jpg" alt="#"/></figure>
+                     <figure><img src="images/card.jpg" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-8 offset-md-2">
@@ -139,7 +139,7 @@
             <div class="container">
                <div class="row border_bo1 ">
                   <div class="col-md-4">
-                     <a class="logof" href="index.html"><img src="images/logo.png" alt="#"/></a> 
+                     <a class="logof" href="index.html"><img src="images/fds2.png" alt="#"/></a> 
                      <form class="form_subscri">
                         <div class="row">
                            <!-- <div class="col-md-12">
@@ -201,10 +201,11 @@
                            <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> demo@gmail.com</a></li>
                         </ul>
                         <ul class="social_icon">
-                           <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                           <li><a href="https://www.facebook.com/151301215712218/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                           <li><a href="https://www.instagram.com/ankurdasbbd/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                            <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                           <li><a href="https://bit.ly/mychannel321"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+                           
                         </ul>
                      </div>
                   </div>
